--- a/repo/index.html
+++ b/repo/index.html
@@ -23,5 +23,14 @@
 	</div>
 </div>
 <p></p>
+<div class="container">
+	<div class="card">
+		<div class="card-body">
+			<img src="icon.png"<p><br><span class="text-primary"><b>YouTube HD</span></b>
+                         <br>
+			<a class="btn btn-sm btn-primary" href="https://defaultstar.github.io/repo/debs/com.defaultstar.springboard-youtubehd.deb">Download .DEB</a>
+		</div>
+	</div>
+</div>
 </body>
 </html>
